--- a/WebSite/public/CSS/style.css
+++ b/WebSite/public/CSS/style.css
@@ -3,16 +3,14 @@
 *{
     margin:0;
     padding:0;  
-}
-a:link {
     text-decoration: none;
 }
-
 .logo {
     display: flex;
     padding-left: 5vb;
     align-items: center;
     justify-content: space-between;
+    text-decoration: none;
 }
 .logo img{
     height: 110%;
@@ -31,6 +29,13 @@ a:link {
     justify-content: space-between;
     height: 5vh;
 }
+.header a:visited{
+    color: white;
+}
+.header a:hover{
+    opacity: 0.9;
+    cursor: default;
+}
 .nav-links{
     display: flex;
     align-items: center;
@@ -41,16 +46,11 @@ a:link {
 .nav-item{
     list-style-type: none;
 }
-.nav-item a:visited{
-    color: white;
-}
-.nav-item:hover{
-    color: #757575;
-}
 .info-block{
     display: flex;
     align-items: center;
     justify-content: center;
+    transition-duration: 0.2s;
 }
 .image-block{
     display: flex;
@@ -59,7 +59,6 @@ a:link {
 .image-block img{
     height: 100%;
     width: 90%;
-   
 }
 .text-block{
     display: flex;
@@ -70,7 +69,7 @@ a:link {
     text-align: justify;
     padding-right: 5em;
 }
-.formButton{
+.button{
     margin-top: 1em;
     font-family: 'Merriweather Sans', sans-serif;
     font-size: 2vb;
@@ -78,13 +77,61 @@ a:link {
     height: 5em;
     background-color: #FF6700;
     color: white;
-    border-radius: 10%;
+    border-radius: 10px;
+    transition-duration: 0.4s;
+    border: 0px;
+}
+.formButton{
+    margin: 1em;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: 2vb;
+    width: 10em;
+    height: 2em;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
     transition-duration: 0.4s;
     border: 0px;
 }
 .formButton:hover{
     opacity: 0.6;
 }
-.form{
+.form-block{
     display: none;
+    justify-content: center;
+}
+.form{
+    display: flex;
+    width: 30%;
+    margin-top: 5vh;
+    border-radius: 15px;
+    background-color: #FF6700;
+    color: white;
+    font-family: 'Merriweather Sans', sans-serif;
+    box-shadow: 6px 5px 5px 0px #e0e0e0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.form label{
+    margin: 1em;
+    font-size: 1.5em;
+}
+.formInput{
+    border-radius: 2px;
+    margin: 1em;
+    font-size: 1.2em;
+    border: 0px;
+    height: 1.4em;
+}
+
+.form-inputs{
+    display: flex;
+    flex-direction: column;
+}
+.doubleBlock{
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+
 }
